# wch-usb-hid-serial-keycode-tools

./: .gitignore  LICENSE.txt  README-ja.md  README.md  ch9350-converter.py  ch9350-keysender.py  ch9350-proxy.py  ch9350-reader.py  pyproject.toml
examples/: ch9328_demo.py  ch9329_demo.py
src/wch_hid_serial/: __init__.py  serialio.py
src/wch_hid_serial/ch9328/: __init__.py  device.py
src/wch_hid_serial/ch9329/: __init__.py  device.py  keyboard.py  mouse.py  protocol.py
src/wch_hid_serial/ch9350/: __init__.py  convert.py  device.py  keysend.py  protocol.py
src/wch_hid_serial/cli/ch9328/: __init__.py  keysender.py
src/wch_hid_serial/cli/ch9329/: __init__.py  keysender.py  mouse.py
src/wch_hid_serial/cli/ch9350/: __init__.py  converter.py  keysender.py  proxy.py  reader.py
src/wch_hid_serial/hid/: __init__.py  keycodes.py  keys.py  layouts.py  modifiers.py  report.py
src/wch_hid_serial/hid/layouts/: README.md  de105.yaml  fr105.yaml  jp106.yaml  uk105.yaml  us104.yaml
tests/: test_ch9328.py  test_ch9329_device.py  test_ch9329_keyboard.py  test_ch9329_mouse.py  test_ch9329_protocol.py  test_convert.py  test_device.py  test_keycodes.py  test_keys.py  test_keysend.py  test_layouts.py  test_modifiers.py  test_protocol.py  test_report.py
